# mobilevit-fluorescent-cells

./: .gitignore  AUTHORS.md  pyproject.toml  run.py
config/: fluorescent_mobilevit_hps.yaml  segformer_hp.yaml
notebooks/: 3-upload_model_to_huggingface_hub.ipynb  fluorescent_semantic_brain.ipynb  hf-segformer_semantic_segmentation.ipynb  mobilevit_semantic_segmentation.ipynb
notebooks/deeplabv3-mobilevit_scene_parse_150/runs/Oct04_20-19-39_Marlons-MacBook-Pro.local/: events.out.tfevents.1696472428.Marlons-MacBook-Pro.local.11060.0
notebooks/deeplabv3-mobilevit_scene_parse_150/runs/Oct04_20-22-09_Marlons-MacBook-Pro.local/: events.out.tfevents.1696472590.Marlons-MacBook-Pro.local.11060.1  events.out.tfevents.1696472727.Marlons-MacBook-Pro.local.11060.2  events.out.tfevents.1696472755.Marlons-MacBook-Pro.local.11060.3  events.out.tfevents.1696472999.Marlons-MacBook-Pro.local.11060.4  events.out.tfevents.1696473049.Marlons-MacBook-Pro.local.11060.5  (+2 more)
notebooks/segformer-b0_scene_parse_150/: README.md  config.json
notebooks/segformer-b0_scene_parse_150/checkpoint-1000/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/segformer-b0_scene_parse_150/checkpoint-960/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/segformer-b0_scene_parse_150/checkpoint-980/: rng_state.pth  scheduler.pt  trainer_state.json
src/: __init__.py  app.py  main.py
src/data/: __init__.py  data_preprocessing.py
src/models/: __init__.py  hyperparameters_tuning.py  mobilevit.py
src/tools/: __init__.py  hyperparameters_tuning.py  predict.py  train_model.py
(+7 files in other folders)
