[tool.poetry]
name = "semantic-segmentation"
version = "0.1.0"
description = "Semantic Segmentation Project"
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = "2.12.0"
tensorflow-metal = "^1.1.0"
flake8 = "^6.1.0"
black = "^23.9.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
polars = "^0.19.7"
seaborn = "^0.13.0"
transformers = "^4.34.0"
datasets = "^2.14.5"
evaluate = "^0.4.0"
accelerate = "^0.23.0"
jupyterlab = "^4.0.6"
pylance = "^0.8.2"
ipykernel = "^6.25.2"
ipywidgets = "^8.1.1"
pycocotools = "^2.0.7"
imageio = "^2.31.5"
scikit-image = "^0.22.0"
pytorch-lightning = "^2.0.9.post0"
albumentations = "^1.3.1"
torchvision = "^0.16.0"
optuna = "^3.3.0"
icecream = "^2.1.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
